--- a/src/client/index.html
+++ b/src/client/index.html
@@ -47,6 +47,8 @@
       <div class="page-header">
         <h1>කෙරුවාව!</h1>
       </div>
+
+      <div id="app"></div>
     </div>
 
     <footer class="footer">
