--- a/src/client/index.html
+++ b/src/client/index.html
@@ -40,6 +40,11 @@
         margin: 20px 0;
         text-align: center;
     }
+
+    #mainCanvas {
+        width: 100%;
+        height: 60vh;
+    }
     </style>
   </head>
   <body>
@@ -48,6 +53,7 @@
         <h1>කෙරුවාව!</h1>
       </div>
 
+      <canvas id="mainCanvas"></canvas>
       <div id="app"></div>
     </div>
 
