Show version in the footer

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -59,7 +59,7 @@
 
     <footer class="footer">
       <div class="container">
-          <p class="text-muted">Keruwawa - Copyright 2016 <a href="https://sudaraka.org/">Sudaraka Wijesinghe</a> - BSD-2-Clause - <a href="https://github.com/sudaraka/keruwawa">source</a></p>
+          <p class="text-muted">Keruwawa v<span id="footerVersion"><%= htmlWebpackPlugin.options.version %></span> - Copyright 2016 <a href="https://sudaraka.org/">Sudaraka Wijesinghe</a> - BSD-2-Clause - <a href="https://github.com/sudaraka/keruwawa">source</a></p>
       </div>
     </footer>
 
